# nixieclock-firmware

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README.md  config.mk  ctype.h  doxygen.config  flash.gdb  flash.ld  kmain.c  stdio.h  stdlib.h  string.h  types.h
asf/sam/utils/syscalls/gcc/: syscalls.c
board/: init.c  init.h  pins.h
clock/boards/user_board/: init.c  user_board.h
clock/boards/user_board/debug_scripts/gcc/: user_board_flash.gdb
clock/components/ds3231/: ds3231.c  ds3231.h
clock/components/hv5530/: hv5530.c  hv5530.h
clock/components/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_font8x8.c
clock/components/wm8731/: wm8731.c  wm8731.h
clock/services/audio/: audio.c  audio.h
clock/services/clock/: clock.c  clock.h
clock/services/console/: console.c
clock/services/display/: display.c  display.h
clock/utils/: assert.h  main.c  svcall.c  svcall.h
cmake/: compiler.cmake  jlink.cmake
components/: max6656.c  ssd1306.c  wm8731.c
components/ds3231/: ds3231.c  ds3231.h
components/hv5530/: hv5530.c  hv5530.h
components/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_font8x8.c
components/wm8731/: wm8731.c  wm8731.h
cpu/: common.h  svcall.c  svcall.h  vectors.c
cpu/cortex-m3/: nvic.h  scb.h
cpu/peripherals/: eefc.h  pio.h  pmc.h  rstc.h  rtc.h  spi.h  ssc.h  supc.h  tc.h  twi.h  uart.h  wdt.h
doc/: doxygen.config
doxygen/: .gitignore  doxyfile.doxygen.in
drivers/: twi.c
drivers/twi/: twi_master.c  twi_master.h
include/: audio.h  clock.h  console.h  ctype.h  display.h  ds1807.h  ds3231.h  keyboard.h  max6656.h  menu.h  pca9534a.h  pins.h  sam3u4e.h  ssd1306.h  stdio.h  stdlib.h  string.h  svcall.h  system.h  timer.h  types.h  wm8731.h
include/arm/: nvic.h  scb.h
include/sam/: eefc.h  pdc.h  pio.h  pmc.h  rstc.h  rtc.h  rtt.h  spi.h  ssc.h  supc.h  tc.h  twi.h  uart.h  wdt.h
lib/ctype/: isprint.c  isspace.c  tolower.c  toupper.c
lib/include/: ctype.h  stdio.h  stdlib.h  string.h
lib/stdio/: kgetc.c  kprintf.c  kputc.c  kputs.c  vxprintf.c
lib/stdlib/: ltostr.c  strtoul.c  ultostr.c
lib/string/: memcpy.c  memset.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strlen.c  strncat.c  strncmp.c  strrchr.c
local/applications/clock/: asf.h  main.c
local/applications/clock/config/: conf_board.h
local/boards/user_board/: init.c  user_board.h
local/components/environment/bmp085/: bmp085.h
local/components/environment/hih6130/: hih6130.c  hih6130.h
local/components/rtc/ds3231/: ds3231.c
local/config/: conf_access.h  conf_fatfs.h  conf_hv5530.h  conf_sd_mmc.h  conf_uart_serial.h  conf_wm8731.h
local/services/audio/: audio.c  audio.h
local/services/clock/: clock.c  clock.h
local/services/display/: display.c  display.h
local/services/dma/: dma.c  dma.h
services/: audio.c  clock.c  console.c  display.c  keyboard.c  menu.c  timer.c
services/audio/: audio.c
services/clock/: clock.c  clock.h
services/console/: console.c  console.h
services/display/: display.c  display.h
src/: asf.h  main.c
src/boards/user_board/: init.c  user_board.h
src/components/display/hv5530/: hv5530.c  hv5530.h
src/components/environment/bmp085/: bmp085.c
src/components/rtc/ds3231/: ds3231.h
src/config/: conf_aat31xx.h  conf_access.h  conf_board.h  conf_clock.h  conf_fatfs.h  conf_hv5530.h  conf_hx8347a.h  conf_sd_mmc.h  conf_ssd1306.h  conf_wm8731.h
src/drivers/hv5530/: hv5530.c  hv5530.h
src/drivers/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_font8x8.c
src/services/audio/: audio.c  audio.h
src/services/clock/: clock.c
src/services/display/: display.c  display.h
src/services/dma/: dma.c  dma.h
system/: console.c  exceptions.c  flash.gdb  flash.jlink  flash.ld  reset.c  svcall.c  vectors.c
